# lib-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: prerelease.yml  release.yml
src/lib_ml/: __init__.py  _version.py  preprocessing.py
